--- a/views/index.erb
+++ b/views/index.erb
@@ -45,7 +45,7 @@ uniqueness = graph.get_uniqueness(summonername)
         <div class="col-md-12">
           <hr>
           <p style="text-decoration:underline;">Top Masteries</p>
-          <p><%=uniquness%></p>
+          <p><%=uniqueness%></p>
           <%masteries.each do |mastery|%>
             <div class="row">
               <div class="col-md-4">
