Data not columns

--- a/views/index.erb
+++ b/views/index.erb
@@ -24,7 +24,7 @@ recommendation = graph.get_popular_picks(summonername)["data"]
 champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
 
 attributes = graph.get_attributes(summonername)
-uniqueness = graph.get_uniqueness(summonername)["columns"]
+uniqueness = graph.get_uniqueness(summonername)["data"]
 
 # unique_hash = Hash.new
 #
