--- a/views/index.erb
+++ b/views/index.erb
@@ -30,7 +30,7 @@ unique_hash = Hash.new
 
 if uniqueness.lengh > 0
   uniqueness.each do |unique|
-    unique_hash[champion_pool[unique[0]]] = unique[1];
+    unique_hash[[unique[0]] = unique[1];
   end
 end
 %>
