--- a/views/index.erb
+++ b/views/index.erb
@@ -25,6 +25,10 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
 
 attributes = graph.get_attributes(summonername)["data"]
 uniqueness = graph.get_uniqueness(summonername)["data"]
+
+var1 = uniqueness[0];
+var2 = uniqueness[1];
+var3 = uniqueness[2];
 %>
 
 <body onLoad="setQuote('Just as I hypothesized!')">
@@ -42,7 +46,9 @@ uniqueness = graph.get_uniqueness(summonername)["data"]
         <div class="col-md-12">
           <hr>
           <p style="text-decoration:underline;">Top Masteries</p>
-          <%=uniqueness%>
+          <%=var1%><br/>
+          <%=var2%><br/>
+          <%=var3%><br/>
           <%masteries.each do |mastery|%>
             <div class="row">
               <div class="col-md-4">
