Percent added & variable should actually show

--- a/views/index.erb
+++ b/views/index.erb
@@ -58,9 +58,9 @@ end
               <div class="col-md-8">
                 <p><%=DongerRest.get_champion_name(mastery["championId"])%><p>
                 <% if hashindex == 0 %>
-                  <p>uniquehash[hashindex]</p>
+                  <p style="font-size:10px;">"<%=uniquehash[hashindex]%>%"</p>
                 <% else %>
-                  <p>uniquehash[hashindex]</p>
+                  <p style="font-size:10px;">"<%=uniquehash[hashindex]%>%"</p>
                 <% end %>
               </div>
             </div>
