Checking on unique hash...

--- a/views/index.erb
+++ b/views/index.erb
@@ -49,6 +49,7 @@ end
           <hr>
           <p style="text-decoration:underline;">Top Masteries</p>
           <% hashindex = 0 %>
+          <%= uniquehash %>
           <%masteries.each do |mastery|%>
             <div class="row">
               <div class="col-md-4">
