--- a/views/index.erb
+++ b/views/index.erb
@@ -58,9 +58,9 @@ end
               <div class="col-md-8">
                 <p style="margin-bottom:0px;"><%=DongerRest.get_champion_name(mastery["championId"])%></p>
                 <% if hashindex == 1 %>
-                  <p title="<%=uniquehash[hashindex]%>% of people main this champ as their #<%=hashindex%>" style="font-size:10px;">"<%=uniquehash[hashindex]%>%"</p>
+                  <p title="<%=uniquehash[hashindex]%>% of people main this champ as their #<%=hashindex%>" style="font-size:10px;"><%=uniquehash[hashindex]%>%</p>
                 <% else %>
-                  <p title="<%=uniquehash[hashindex]%>% those people use this champ as their #<%=hashindex%>" style="font-size:10px;">"<%=uniquehash[hashindex]%>%"</p>
+                  <p title="<%=uniquehash[hashindex]%>% those people use this champ as their #<%=hashindex%>" style="font-size:10px;"><%=uniquehash[hashindex]%>%</p>
                 <% end %>
               </div>
             </div>
