--- a/views/index.erb
+++ b/views/index.erb
@@ -24,6 +24,10 @@ recommendation = graph.get_popular_picks(summonername)["data"]
 champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
 
 attributes = graph.get_attributes(summonername)["data"]
+attributeary = []
+attributes.each do |attribute|
+  attributeary.push(attribute["data"]["name"])
+end
 
 uniqueness = graph.get_uniqueness(summonername)["data"]
 uniquehash = Hash.new
@@ -73,7 +77,7 @@ end
         </div>
         <div>
           <p style="text-decoration:underline;">Patterns We Found</p>
-          <p><%=attributes%></p>
+          <p><%=attributeary%></p>
         </div>
       </div>
       <% champion_pool.each do |champion| %>
