--- a/views/index.erb
+++ b/views/index.erb
@@ -26,7 +26,7 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
 attributes = graph.get_attributes(summonername)["data"]
 attributeary = []
 attributes.each do |attribute|
-  attributeary.push(attribute[0]["data"])
+  attributeary.push(attribute[0]["data"]["name"])
 end
 
 uniqueness = graph.get_uniqueness(summonername)["data"]
@@ -76,8 +76,10 @@ end
           <hr>
         </div>
         <div>
-          <p style="text-decoration:underline;">Patterns We Found</p>
-          <p><%=attributeary%></p>
+          <p style="text-decoration:underline;">You like these attributes in a champ</p>
+          <% attributes.each do |attribute|%>
+          <p><%=attribute%></p>
+          <% end%>
         </div>
       </div>
       <% champion_pool.each do |champion| %>
