--- a/views/index.erb
+++ b/views/index.erb
@@ -77,7 +77,7 @@ end
         </div>
         <div>
           <p style="text-decoration:underline;">You like these attributes in a champ</p>
-          <% attributesary.each do |attribute|%>
+          <% attributeary.each do |attribute|%>
           <p><%=attribute%></p>
           <% end%>
         </div>
