--- a/views/index.erb
+++ b/views/index.erb
@@ -76,9 +76,9 @@ end
           <hr>
         </div>
         <div>
-          <p style="text-decoration:underline;">You like these attributes in a champ</p>
+          <p style="text-decoration:underline;">Champions You Like Have:</p>
           <% attributeary.each do |attribute|%>
-          <p><%=attribute%></p>
+          <p style="font-size:17px;"><%=attribute%></p>
           <% end%>
         </div>
       </div>
