--- a/views/index.erb
+++ b/views/index.erb
@@ -20,9 +20,7 @@ if mastery_data.length == 0
   end
 end
 
-recommendation = graph.get_popular_picks(summonername)["data"]
-champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
-
+champion_picks = graph.get_popular_picks(summonername)["data"]
 attributes = graph.get_attributes(summonername)["data"]
 
 uniqueness = graph.get_uniqueness(summonername)["data"]
@@ -76,17 +74,19 @@ end
           <p><%=attributes%></p>
         </div>
       </div>
-      <% champion_pool.each do |champion| %>
+      <% champion_picks.each do |champion| %>
+      <% champion_data = champion[0]["data"] %>
+      <% champion_spells = champion[2].map{|spell| spell["data"]} %>
       <div class="col-lg-3" align="center">
-        <h3><%=champion%></h3>
-        <% skin_key = DongerRest.get_champion_skin_key(champion) %>
-        <img title="<%=champion%>" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/<%=skin_key%>_0.jpg" style="max-width:100%;position:relative;"</img>
+        <h3><%=champion_data["name"]%></h3>
+        <% skin_key = champion_data["skin"] %>
+        <img title="<%=champion_data["name"]%>" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/<%=skin_key%>" style="max-width:100%;position:relative;"</img>
         <div class="row" style="padding-top:20px;padding-left:10px;padding-right:10px;">
-          <% champion_passive = DongerRest.get_passive(champion)%>
+          <% champion_passive = champion_spells.find{|spell| spell["order"] == 0} %>
           <div class="col-sm-3" align="center" style="padding-left:0px;padding-right:0px;">
             <img title="<%=champion_passive["description"]%>" src="http://ddragon.leagueoflegends.com/cdn/6.9.1/img/passive/<%=champion_passive["image"]%>" style="max-width:80%;position:relative;">
           </div>
-          <% DongerRest.get_champion_skills(champion).each do |spell| %>
+          <% champion_spells.select{|spell| spell["order"] != 0}.each do |spell| %>
           <div class="col-sm-3" align="center" style="padding-left:0px;padding-right:0px;">
             <img title="<%=spell["description"]%>" src="http://ddragon.leagueoflegends.com/cdn/6.9.1/img/spell/<%=spell["image"]%>" style="max-width:80%;position:relative;">
           </div>
