--- a/views/index.erb
+++ b/views/index.erb
@@ -8,17 +8,21 @@ require './lib/donger_graph'
 graph = DongerGraph.new()
 mastery_data = graph.get_mastery(summonername)["data"]
 
-summoner = DongerRest.get_summoners([summonername]).values[0]
-id = summoner["id"]
-masteries = DongerRest.get_masteries(id)
-raise "No Masteries" if masteries.length == 0
-
 if mastery_data.length == 0
+  summoner = DongerRest.get_summoners([summonername]).values[0]
+  id = summoner["id"]
+  masteries = DongerRest.get_masteries(id)
+  raise "No Masteries" if masteries.length == 0
+
   graph.add_summoner(id, summonername)
   masteries.each do |mastery|
     graph.add_mastery(id, mastery["championId"], mastery["championPoints"])
   end
+
+  mastery_data = graph.get_mastery(summonername)["data"]
 end
+
+puts mastery_data
 
 champion_picks = graph.get_popular_picks(summonername)["data"]
 attributes = graph.get_attributes(summonername)["data"]
@@ -50,14 +54,13 @@ end
           <hr>
           <p style="text-decoration:underline;">Top Masteries</p>
           <% hashindex = 1 %>
-          <%masteries.each do |mastery|%>
+          <%mastery_data.each do |mastery|%>
             <div class="row">
               <div class="col-md-4">
-                <p title="Mastery Level" style="margin-bottom:0px;color:#2E79D4;text-shadow: -1px 0 #0B2541, 0 1px #0B2541, 1px 0 #0B2541, 0 -1px #0B2541;"><%=mastery["championLevel"]%></p>
-                <p title="Total Mastery Points" style="font-size:10px;"><%=mastery["championPoints"]%></p>
+                <p title="Total Mastery Points" style="font-size:10px;"><%=mastery[1]["data"]["points"]%></p>
               </div>
               <div class="col-md-8">
-                <p style="margin-bottom:0px;"><%=DongerRest.get_champion_name(mastery["championId"])%></p>
+                <p style="margin-bottom:0px;"><%=mastery[2]["data"]["name"]%></p>
                 <% if hashindex == 1 %>
                   <p title="<%=uniquehash[hashindex]%>% of people main this champ as their #<%=hashindex%>" style="font-size:10px;"><%=uniquehash[hashindex]%>%</p>
                 <% else
