Margin top minimal

--- a/views/index.erb
+++ b/views/index.erb
@@ -57,7 +57,7 @@ unique_string = "#{one_match}% of summoners mastered at least one similar champi
       <div class="col-lg-3" align="center">
         <h2 style="font-size:1.7em;padding-bottom:5px;"><%=summonername%></h2>
         <div class="col-md-12">
-          <hr>
+          <hr style="margin-top:0px;">
           <p style="text-decoration:underline;">Top Masteries</p>
             <%mastery_data.reverse.each do |mastery|%>
             <div class="row">
