removed padding top

--- a/views/index.erb
+++ b/views/index.erb
@@ -47,7 +47,7 @@ unique_string = "#{one_match}% of summoners mastered at least one similar champi
 
 <body onLoad="setQuote('Just as I hypothesized!')">
   <section id="portfolio">
-    <div class="container" style="padding-top:100px;">
+    <div class="container">
       <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-9" style="padding-bottom:20px;text-align:center;">
