--- a/views/index.erb
+++ b/views/index.erb
@@ -25,6 +25,11 @@ end
 puts mastery_data
 
 champion_picks = graph.get_popular_picks(summonername)["data"]
+attributes = graph.get_attributes(summonername)["data"]
+attributeary = []
+attributes.each do |attribute|
+  attributeary.push(attribute[0]["data"]["name"])
+end
 
 %>
 
@@ -34,11 +39,21 @@ champion_picks = graph.get_popular_picks(summonername)["data"]
       <div class="row">
       <% champion_picks.each do |champion| %>
       <% champion_data = champion[0]["data"] %>
+      <% champion_spells = champion[2].map{|spell| spell["data"]} %>
       <div class="col-lg-3" align="center" style="height:573px;">
         <h3><%=champion_data["name"]%></h3>
         <% skin_key = champion_data["skin"] %>
         <img title="<%=champion_data["name"]%>" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/<%=skin_key%>" style="max-width:100%;position:relative;"</img>
         <div class="row" style="padding-top:20px;padding-left:10px;padding-right:10px;">
+          <% champion_passive = champion_spells.find{|spell| spell["order"] == 0} %>
+          <div class="col-sm-3" align="center" style="padding-left:0px;padding-right:0px;">
+            <img title="<%=champion_passive["description"]%>" src="http://ddragon.leagueoflegends.com/cdn/6.9.1/img/passive/<%=champion_passive["image"]%>" style="max-width:80%;position:relative;">
+          </div>
+          <% champion_spells.select{|spell| spell["order"] != 0}.each do |spell| %>
+          <div class="col-sm-3" align="center" style="padding-left:0px;padding-right:0px;">
+            <img title="<%=spell["description"]%>" src="http://ddragon.leagueoflegends.com/cdn/6.9.1/img/spell/<%=spell["image"]%>" style="max-width:80%;position:relative;">
+          </div>
+          <% end %>
         </div>
       </div>
       <% end %>
