--- a/views/index.erb
+++ b/views/index.erb
@@ -31,6 +31,15 @@ attributes.each do |attribute|
   attributeary.push(attribute[0]["data"]["name"])
 end
 
+uniqueness = graph.get_uniqueness(summonername)["data"]
+uniquehash = Hash.new
+uniqueness.each do |matchedplayers|
+  uniquehash[matchedplayers[0]] = matchedplayers[1]
+end
+
+three_match = uniquehash[3].round(2) || 0
+two_match = uniquehash[2].round(2) || 0
+one_match = uniquehash[1].round(2) || 0
 %>
 
 <body onLoad="setQuote('Just as I hypothesized!')">
