--- a/views/index.erb
+++ b/views/index.erb
@@ -37,11 +37,11 @@ uniqueness.each do |matchedplayers|
   uniquehash[matchedplayers[0]] = matchedplayers[1]
 end
 
-three_match = uniquehash[3].round(2) ||= 0
-two_match = uniquehash[2].round(2) ||= 0
-one_match = uniquehash[1].round(2) ||= 0
-
-unique_string = "#{one_match}% of summoners mastered at least one similar champion, #{two_match}% mastered at least two similar champions, and #{three_match}% mastered all three similar champion!"
+# three_match = uniquehash[3].round(2) ||= 0
+# two_match = uniquehash[2].round(2) ||= 0
+# one_match = uniquehash[1].round(2) ||= 0
+#
+# unique_string = "#{one_match}% of summoners mastered at least one similar champion, #{two_match}% mastered at least two similar champions, and #{three_match}% mastered all three similar champion!"
 
 %>
 
@@ -80,7 +80,7 @@ unique_string = "#{one_match}% of summoners mastered at least one similar champi
               </div>
             </div>
             <%end%>
-            <p style="font-size:12px;"><%=unique_string%></p>
+            <p style="font-size:12px;"><%=uniquehash%></p>
           <hr>
         </div>
         <div>
