Fixed rounding issue

--- a/views/index.erb
+++ b/views/index.erb
@@ -37,11 +37,15 @@ uniqueness.each do |matchedplayers|
   uniquehash[matchedplayers[0]] = matchedplayers[1]
 end
 
-# three_match = uniquehash[3].round(2) ||= 0
-# two_match = uniquehash[2].round(2) ||= 0
-# one_match = uniquehash[1].round(2) ||= 0
-#
-# unique_string = "#{one_match}% of summoners mastered at least one similar champion, #{two_match}% mastered at least two similar champions, and #{three_match}% mastered all three similar champion!"
+three_match = uniquehash[3]) ||= 0
+two_match = uniquehash[2] ||= 0
+one_match = uniquehash[1] ||= 0
+
+three_match = three_match.round(2)
+two_match = two_match.round(2)
+one_match = one_match.round(2)
+
+unique_string = "#{one_match}% of summoners mastered at least one similar champion, #{two_match}% mastered at least two similar champions, and #{three_match}% mastered all three similar champion!"
 
 %>
 
@@ -80,7 +84,7 @@ end
               </div>
             </div>
             <%end%>
-            <p style="font-size:12px;"><%=uniquehash%></p>
+            <p style="font-size:12px;"><%=unique_string%></p>
           <hr>
         </div>
         <div>
