--- a/views/layout.erb
+++ b/views/layout.erb
@@ -50,7 +50,7 @@
         </div>
     </nav>
 
-    <div style="padding-bottom:125px;">
+    <div id="main-content" style="padding-bottom:200px;">
       <%= yield %>
     </div>
 
